# Candy

./: README.md
Medium_Candy/: CMakeLists.txt  after_vis.mac  draw_csv.py  main.cc  muon_gun.mac  photon.mac  run.mac  sipm_hits.csv  vis.mac
Medium_Candy/data/: lab_scint_spectrum.csv
Medium_Candy/include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  Materials.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RunAction.hh  SipmHit.hh  SipmSD.hh
Medium_Candy/src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  Materials.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RunAction.cc  SiPMHit.cc  SipmSD.cc
